vertical alignment fixed

--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -19,7 +19,6 @@
 .container {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
 }
 
 .charts {
